Updating obsidian notes to match ch-motivacion

--- a/vault/.obsidian/workspace
+++ b/vault/.obsidian/workspace
@@ -52,8 +52,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 225,
-    "collapsed": true
+    "width": 225
   },
   "right": {
     "id": "2f1fc9c51d6ad76b",
