--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           biber-version: "latest"
       - name: Run Tectonic + Biber
-        run: tectonic -X comile escrito/pruebas.tex
+        run: tectonic -X compile escrito/pruebas.tex
       - name: Upload pdf
         uses: actions/upload-artifact@v2
         with:
