--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: wtfjoke/setup-tectonic@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          biber-version: "latest"
+          biber-version: 2.14
       - name: Run Tectonic + Biber
         run: tectonic -X compile escrito/pruebas.tex
       - name: Upload pdf
