Fixing document name in GH action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: main
-          path: pruebas.pdf
+          path: escrito/pruebas.pdf
