Terminado ALPBDT + primera parte de optim theory

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,5 @@ papers/Reinforcement Learing - Sutton & Barto.pdf
 *.pdf
 vault/readings/
 .obsidian
-.csv
+.csvescrito/Literate/
+escrito/Literate
